--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ code {
 
 .sw-app {
   display: flex;
-  height: 100%;
+  min-height: 100%;
 }
 
 .sw-app .sw-tabs {
@@ -34,6 +34,13 @@ code {
   color: #4f6472;
   background-color: #042235;
   height: 100%;
+}
+
+.sw-app .sw-tabs .MuiTabs-root.MuiTabs-vertical .MuiTabs-scroller.MuiTabs-fixed
+.MuiTabs-flexContainer.MuiTabs-flexContainerVertical .MuiTab-root {
+  width: 62px;
+  min-width: 62px;
+  padding: 19px;
 }
 
 .sw-app .sw-tab-panel {
