--- a/src/index.css
+++ b/src/index.css
@@ -147,3 +147,13 @@ code {
   color: #4f6472;
 }
 
+.sw-app .sw-tab-panel .sw-loading-screen {
+  background-color: #f1f4f8;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #4f6472;
+  font-size: calc(30px + 2vmin);
+}
