--- a/src/index.css
+++ b/src/index.css
@@ -31,9 +31,37 @@ code {
 
 .sw-app .sw-tabs .MuiTabs-root.MuiTabs-vertical {
   position: relative;
-  color: #4f6472;
+  color: #ffffff;
   background-color: #042235;
   height: 100%;
+}
+
+/* disabled material UI default opacity setting */
+.sw-app .sw-tabs .MuiTabs-root.MuiTabs-vertical .MuiTabs-scroller.MuiTabs-fixed
+.MuiTabs-flexContainer.MuiTabs-flexContainerVertical
+.MuiButtonBase-root.MuiTab-root.MuiTab-textColorInherit {
+  opacity: unset;
+}
+
+/* styles for icons on left Tabs bar */
+.sw-app .sw-tabs .MuiTabs-root.MuiTabs-vertical .MuiTabs-scroller.MuiTabs-fixed
+.MuiTabs-flexContainer.MuiTabs-flexContainerVertical
+.MuiButtonBase-root.MuiTab-root.MuiTab-textColorInherit .MuiSvgIcon-root {
+  opacity: 0.5;
+}
+
+/* styles for selected Tab on left Tabs bar */
+.sw-app .sw-tabs .MuiTabs-root.MuiTabs-vertical .MuiTabs-scroller.MuiTabs-fixed
+.MuiTabs-flexContainer.MuiTabs-flexContainerVertical
+.MuiButtonBase-root.MuiTab-root.MuiTab-textColorInherit.Mui-selected {
+  background-color: #2995da;
+}
+
+/* styles for selected Tab's icon */
+.sw-app .sw-tabs .MuiTabs-root.MuiTabs-vertical .MuiTabs-scroller.MuiTabs-fixed
+.MuiTabs-flexContainer.MuiTabs-flexContainerVertical
+.MuiButtonBase-root.MuiTab-root.MuiTab-textColorInherit.Mui-selected .MuiSvgIcon-root {
+  opacity: 1.0;
 }
 
 .sw-app .sw-tabs .MuiTabs-root.MuiTabs-vertical .MuiTabs-scroller.MuiTabs-fixed
@@ -94,6 +122,16 @@ code {
   padding: 1%;
 }
 
+/* set colours of Create New Team button */
+.sw-app .sw-tab-panel .sw-teams-page .sw-teams-all-bars .sw-teams-create-bar .sw-teams-create-bar-create-a-team
+.MuiButtonBase-root.MuiButton-root.MuiButton-contained {
+  color: #ffffff;
+  background-color: #40d2bf;
+  box-shadow: unset;
+  padding-left: 9px;
+  padding-right: 11px;
+}
+
 .sw-app .sw-tab-panel .sw-teams-page .sw-teams-all-bars .sw-teams-tab-bar {
   display: inline-block;
   position: relative;
@@ -106,6 +144,27 @@ code {
   display: flex;
   float: left;
 }
+
+/* disable ripple effect for material UI tabs in Teams tabs */
+.sw-app .sw-tab-panel .sw-teams-page .sw-teams-all-bars .sw-teams-tab-bar .sw-teams-tabs
+.MuiTabs-root .MuiTabs-scroller.MuiTabs-fixed .MuiTouchRipple-root {
+  display: none;
+}
+
+/* in Teams tabs, ensure default colour of text black */
+.sw-app .sw-tab-panel .sw-teams-page .sw-teams-all-bars .sw-teams-tab-bar .sw-teams-tabs
+.MuiTabs-root .MuiTabs-scroller.MuiTabs-fixed .MuiTabs-flexContainer
+.MuiButtonBase-root.MuiTab-root.MuiTab-textColorInherit {
+  color: #000000;
+}
+
+/* in Teams tabs, give selected tab blue text */
+.sw-app .sw-tab-panel .sw-teams-page .sw-teams-all-bars .sw-teams-tab-bar .sw-teams-tabs
+.MuiTabs-root .MuiTabs-scroller.MuiTabs-fixed .MuiTabs-flexContainer
+.MuiButtonBase-root.MuiTab-root.MuiTab-textColorInherit.Mui-selected {
+  color: #0083e3;
+}
+
 
 .sw-app .sw-tab-panel .sw-teams-page .sw-teams-all-bars .sw-teams-tab-bar .sw-teams-search {
   display: flex;
@@ -120,7 +179,10 @@ code {
   background-color: #ffffff;
   position: relative;
   padding: 5px;
-  margin: 10px;
+  margin-top: 30px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 30px;
   box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
 }
 
@@ -144,7 +206,8 @@ code {
   align-self: center;
   bottom: 0;
   position: fixed;
-  color: #4f6472;
+  color: #ffffff;
+  opacity: 0.5;
 }
 
 .sw-app .sw-tab-panel .sw-loading-screen {
